--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ html{
 body{
     padding: 20px;
     background-color: hsl(204, 43%, 93%);
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    height: 100vh;
 }
 
 h2, h4, p{
@@ -24,7 +29,6 @@ h2, h4, p{
     border-radius: 5px;
     overflow: hidden;
     background-color: white;
-    margin: auto;
 }
 
 #top-section{
@@ -34,15 +38,11 @@ h2, h4, p{
 }
 
 #bottom-section{
-    width: 100%;
-    height: 55%;
+    display: flex;
 }
 
 #bottom-left-section, #bottom-right-section{
-    display: inline-block;
-    width: 50%;
-    height: 100%;
-    vertical-align: top;
+    flex-basis: 50%;
     color: white;
     padding: 25px;
 }
@@ -92,20 +92,16 @@ button:hover{
     margin-bottom: 25px;
 }
 
-#price-frequency, #price{
-    display: inline-block;
-}
-
 #price-container{
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
 }
 
 #price-frequency{
-    position: relative;
-    top: -3px;
+    margin-left: 5px;
     font-size: 0.8rem;
     opacity: 0.7;
-    margin-left: 5px; 
 }
 
 #bottom-left-section p{
@@ -124,6 +120,14 @@ ul{
 @media (max-width: 650px){
     #bottom-left-section, #bottom-right-section, #card{
         width: 100%;
+        height: auto;
+    }
+
+    #bottom-section{
+        flex-direction: column;
+    }
+
+    body{
         height: auto;
     }
 }
